--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,7 +22,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+} */
 
 .App-link {
   color: #61dafb;
@@ -35,4 +35,84 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.header {
+  width: 100%;
+}
+
+.header-inner {
+  max-width: 1200px;       /* design width */
+  margin: 0 auto;          /* center content */
+  padding: 16px 24px;      /* responsive breathing space */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+.nav-list {
+  display: flex;
+  gap: clamp(16px, 3vw, 32px); /* responsive spacing */
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-list a {
+  text-decoration: none;
+  color: var(--heading-text);
+  font-weight: 500;
+}
+
+.nav-list a.active {
+  color: var(--primary-500);
+}
+
+.logo img {
+  height: clamp(40px, 6vw, 56px);
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-list {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: auto repeat(3, 1fr);
+  gap: clamp(24px, 4vw, 64px);
+}
+
+.footer-column h4 {
+  color: var(--primary-500);
+  margin-bottom: 12px;
+}
+
+.footer-column ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+   color: var(--inverse-text); 
+}
+
+.footer-column a{
+  text-decoration: none;   
+  color: var(--inverse-text);       
+  font-weight: 500;
+}
+
+ .footer-bar {
+  width:100%;
+  background-color: var(--accent-500);
+  padding: clamp(32px, 5vw, 64px) 24px;
+}
+
+.footer-logo{
+width: clamp(60px, 8vw, 90px);
 }
