--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;700&family=Karla:wght@400;500;700;800&display=swap');
+
 :root {
+   /* primary */
   --primary-500: #F4CE14;
   --primary-600: #DDB812;
   --primary-700: #C8A40F;
+   /* accent */
   --accent-500: #495E57;
   --accent-300: #829A8F;
   --accent-100: #E3E7E5;
+   /* secondary */
   --secondary: #EDEFE0;
   --secondary-hover: #DDE0D2;
   --secondary-pressed: #C8CBBE;
+   /* text colors */
   --primary-text: #1B1B1B;
   --secondary-text: #4A4A4A;
   --muted-text: #7D7D7D;
   --heading-text: #495E57;
   --inverse-text: #FFFFFF;
   --disabled-text: #A9A9A9;
+  --error-500:#d32f2f;
+   /* background colors */
   --background-color: #FFFFFF;
   --background-section: #FAFAF8;
   --border-light: #E1E1ED;
   --disabled: #d7d7d2;
-  --primary-font-size: 16px;
-  --spacing-small: 8px;
+  
+  /* Font families */
+  --font-markazi: 'Markazi Text', serif;
+  --font-karla: 'Karla', sans-serif;
+
+  /* Titles */
+  --title-font: var(--font-markazi);
+  --title-weight: 500;
+  --title-size: 4rem;
+
+  --subtitle-font: var(--font-markazi);
+  --subtitle-weight: 400;
+  --subtitle-size: 2.5rem;
+
+  /* Lead text */
+  --lead-font: var(--font-karla);
+  --lead-weight: 500;
+  --lead-size: 1.125rem;
+
+  /* Section titles */
+  --section-title-font: var(--font-karla);
+  --section-title-weight: 800;
+  --section-title-size: 1.25rem;
+
+  --section-category-font: var(--font-karla);
+  --section-category-weight: 800;
+  --section-category-size: 1rem;
+
+  /* Card title */
+  --card-title-font: var(--font-karla);
+  --card-title-weight: 700;
+  --card-title-size: 1.125rem;
+
+  /* Paragraph */
+  --paragraph-font: var(--font-karla);
+  --paragraph-weight: 400;
+  --paragraph-size: 1rem;
+  --paragraph-line-height: 1.125; /* 1.125rem */
+
+  /* Highlight text */
+  --highlight-font: var(--font-karla);
+  --highlight-weight: 500;
+  --highlight-size: 1rem;
 }
 
 
 body {
+  margin: 0;
+  font-family: var(--font-karla);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -35,4 +95,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
