--- a/src/App.css
+++ b/src/App.css
@@ -241,6 +241,7 @@
   font-family: var(--lead-font);
   font-weight: var(--lead-weight);
   font-size: var(--lead-size);
+   cursor: pointer;
 }
 .tertiary-btn {
   margin-top: 1rem;
@@ -257,6 +258,7 @@
   font-family: var(--lead-font);
   font-weight: var(--lead-weight);
   font-size: var(--lead-size);
+   cursor: pointer;
 }
 
 
@@ -324,5 +326,104 @@
    display: flex;
   justify-content: center; 
 
+
 }
 
+
+/* reservations page */
+
+.contact-card {
+  background-color: var(--accent-100);
+  padding: 1.5rem;
+  color: var(--heading-text);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1rem;
+  border-radius: 0rem 1.5rem 1.5rem 0rem;
+  
+}
+
+.contact-card h3 {
+  margin-bottom: 1rem;
+  color: var(--heading-text);
+}
+
+.reservation-wrapper {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+  padding: 4rem 0; /* space top & bottom */
+}
+
+.reservation-section {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* gap: 2rem; */
+  max-width: 900px;
+  margin: auto;
+}
+
+.booking-form {
+  background-color: var(--accent-500);
+  padding: 2rem;
+   border-radius: 1.5rem 0rem 0rem 1.5rem;
+  color: var(--secondary);
+}
+
+.booking-form .title {
+  margin-bottom: 0.5rem;
+}
+
+.booking-form .subtitle {
+  margin-bottom: 2rem;
+  opacity: 0.9;
+}
+
+.form-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.form-grid input,
+.form-grid select {
+  padding: 0.6rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: var(--secondary);
+  color: var(--secondary-text);
+}
+
+.toddlers {
+  font-size: 0.85rem;
+} 
+.options{
+  margin-top: 0.5rem;
+  display: flex;
+  gap: 1rem;
+  flex-direction:row;
+  font-size: 0.85rem;
+}
+
+.booking-form button {
+  width: 18rem;
+  height: 3rem;
+  /* 100%; */
+  border: none;
+  padding: 0.75rem;
+  border-radius: 1rem;
+  cursor: pointer;
+  color: var(--primary-text);
+  background: var(--primary-500);
+  font-family: var(--lead-font);
+  font-weight: var(--lead-weight);
+  font-size: var(--lead-size);
+}
+
+.form-button {
+  display: flex;
+  justify-content: center; 
+  margin-top: 2rem;
+}
